# timed-debouncer-rs

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
